--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,30 +1,4 @@
-// Uncomment this for a sticky footer.
-//
-// .wrapper-for-content-outside-of-footer {
-//   min-height: 100%;
-//   height: auto !important;
-//   height: 100%;
-//   margin: 0 auto -4em;
-// }
-
-// html, body {
-//  height: 100%;
-// }
-
-// .wrapper-for-content-outside-of-footer::after {
-//   content: "";
-//   display: block;
-// }
-
-// .footer-2, .wrapper-for-content-outside-of-footer::after {
-//   height: 17em;
-
-//   @include media($large-screen) {
-//     height: 4em;
-//   }
-// }
-
-.footer-2 {
+.footer {
   $base-spacing: 1.5em !default;
   $action-color: #477DCA !default;
   $medium-screen: 40em !default;
@@ -34,49 +8,45 @@
   $footer-link-color: transparentize($footer-color, 0.6);
   $footer-disclaimer-color: transparentize($footer-color, 0.6);
 
+  &.fixed {
+    position: absolute;
+    bottom: 0;
+  }
+
   background: $footer-background;
-  display: inline-block;
-  padding: $base-spacing;
+  padding: ($base-spacing * 2) $gutter;
   width: 100%;
 
   .footer-logo {
-    margin-bottom: 1em;
-    margin-right: 1em;
+    margin-bottom: 2em;
+    text-align: center;
 
-    @include media($large-screen) {
-      float: left;
-      margin-bottom: 0;
+    img {
+      height: 3em;
     }
   }
 
-  .footer-logo img {
-    height: 1.6em;
+  .footer-links {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: $base-spacing;
   }
 
   ul {
-    line-height: 1.5em;
-    margin: 0 0 1em 0;
+    flex-basis: 13em;
+    flex-shrink: 0;
+    margin-bottom: $base-spacing * 2;
     padding: 0;
-
-    @include media($large-screen) {
-      float: left;
-      line-height: 1.8em;
-      margin-bottom: 0;
-      margin-left: 1em;
-    }
   }
 
-  ul li {
+  li {
+    line-height: 1.5em;
     list-style: none;
-    padding-right: 1em;
-
-    @include media($large-screen) {
-      display: inline;
-      text-align: left;
-    }
+    text-align: center;
   }
 
-  ul li a {
+  li a {
     color: $footer-link-color;
     text-decoration: none;
 
@@ -86,45 +56,24 @@
     }
   }
 
-  .footer-secondary-links {
-    @include media($large-screen) {
-      float: right;
-    }
+  li h3 {
+    color: $footer-color;
+    font-size: 1em;
+    margin-bottom: 0.4em;
+  }
 
-    li {
-      font-size: 0.8em;
-    }
+  hr {
+    border: 1px solid transparentize($footer-disclaimer-color, 0.3);
+    margin: 0 auto $base-spacing;
+    width: 12em;
+  }
 
-    ul.footer-social {
-      margin: 1em 0 0 0;
-
-      @include media($large-screen) {
-        float: right;
-        margin-top: 0;
-      }
-
-      li {
-        float: left;
-        font-size: 1em;
-        line-height: 0;
-        margin: 0;
-        padding-right: 0.7em;
-
-        &:last-child {
-          padding-right: 0;
-        }
-      }
-
-      img {
-        height: 1.6em;
-        opacity: 0.7;
-        padding: 1px;
-
-        &:focus,
-        &:hover {
-          opacity: 1;
-        }
-      }
-    }
+  p {
+    color: $footer-disclaimer-color;
+    font-size: 0.9em;
+    line-height: 1.5em;
+    margin: auto;
+    max-width: 35em;
+    text-align: center;
   }
 }
