Addition of Payroll and Dashboard pages
Addition of payroll and dashboard pages was with bourbon refilLS and bootstrap-sass installed as a gem

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,12 @@
 @import "bourbon/bourbon";
 @import "base/base";
 @import "neat/neat";
+@import "bootstrap-sprockets";
+@import "bootstrap";
 @import "header";
 @import "footer";
-
+@import "dashboard";
+@import "payroll";
 
 .hero {
   $large-screen: 50em !default;
