--- a/app/views/admin/_footer.html.erb
+++ b/app/views/admin/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer fixed" role="contentinfo">
+<footer class="footer" role="contentinfo">
   <div class="footer-logo">
     <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_square.png" alt="Logo image">
   </div>
