--- a/app/views/admin/payroll.html.erb
+++ b/app/views/admin/payroll.html.erb
@@ -1,3 +1,53 @@
 <%= render 'header' %>
-Payroll
+<div class="container">
+	<h1>Payroll Analysis</h1>
+</div>
+<table class="table-minimal">
+  <thead>
+    <tr>
+      <th>Employee/ID</th>
+      <th>Standard salary</th>
+      <th>Hours worked</th>
+      <th>Additional earnings</th>
+      <th>Gross pay</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Row 1 Cell 1</td>
+      <td>Row 1 Cell 2</td>
+      <td>Row 1 Cell 2</td>
+      <td>Row 1 Cell 2</td>
+      <td>Row 1 Cell 2</td>
+    </tr>
+    <tr>
+      <td>Row 2 Cell 1</td>
+      <td>Row 2 Cell 2</td>
+      <td>Row 1 Cell 2</td>
+      <td>Row 1 Cell 2</td>
+      <td>Row 1 Cell 2</td>
+    </tr>
+    <tr>
+      <td>Row 3 Cell 1</td>
+      <td>Row 3 Cell 2</td>
+      <td>Row 3 Cell 1</td>
+      <td>Row 3 Cell 1</td>
+      <td>Row 3 Cell 1</td>
+    </tr>
+    <tr>
+      <td>Row 4 Cell 1</td>
+      <td>Row 4 Cell 2</td>
+      <td>Row 4 Cell 1</td>
+      <td>Row 4 Cell 1</td>
+      <td>Row 4 Cell 1</td>
+    </tr>
+    <tr>
+      <td>Row 4 Cell 1</td>
+      <td>Row 4 Cell 2</td>
+      <td>Row 4 Cell 1</td>
+      <td>Row 4 Cell 1</td>
+      <td>Row 4 Cell 1</td>
+    </tr>
+  </tbody>
+</table>
 <%= render 'footer' %>
