modified payroll page
Change being made to table on payroll page with effects being added.

--- a/app/assets/stylesheets/payroll.scss
+++ b/app/assets/stylesheets/payroll.scss
@@ -1,70 +1,115 @@
-table-minimal {
-  $base-border-color: gainsboro !default;
-  $base-border-radius: 3px !default;
-  $base-background-color: white !default;
-  $base-line-height: 1.5em !default;
-  $base-spacing: 1.5em !default;
-  $action-color: #477DCA !default;
-  $dark-gray: #333 !default;
-  $light-gray: #DDD !default;
-  $medium-screen: 40em !default;
-  $large-screen: 53.75em !default;
-  $base-font-color: $dark-gray !default;
-  $table-border-color: $base-border-color;
-  $table-border: 1px solid $table-border-color;
-  $table-background: $base-background-color;
-  $table-header-background: lighten($table-background, 10);
-  $table-hover-background: darken($table-background, 2);
-  $table-stripe-background: darken($table-background, 4);
-  $table-stripe-background-hover: darken($table-stripe-background, 5);
-  $table-padding: 0.75em 1em;
+@charset "UTF-8";
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
 
-  border-collapse: separate;
-  border-spacing: 0;
-  width: 100%;
-
-  tbody {
-    tr:hover > td, tr:hover > th {
-      background-color: $table-hover-background;
-    }
-    tr:first-child td {
-      border-top: 2px solid $table-border-color;
-    }
-  }
-
-  thead {
-    th {
-      background-color: $table-header-background;
-      border-bottom: 0;
-      padding: $table-padding;
-      text-align: left;
-    }
-  }
-
-  tbody {
-    background-color: $table-background;
-
-    td {
-      border-bottom: 0;
-      border-top: 1px solid $table-border-color;
-      line-height: $base-line-height;
-      padding: $table-padding;
-
-      button {
-        display: inline-block;
-        font-size: 0.7em;
-        line-height: $base-line-height;
-        margin-bottom: 0.3em;
-        margin-right: 0.5em;
-        outline: none;
-        padding: 0.3em 1em;
-        width: 100%;
-
-        @include media($medium-screen) {
-          margin-bottom: 0;
-          width: auto;
-        }
-      }
-    }
-  }
+#margin1 {
+  margin-bottom: 50px;
 }
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  line-height: 1.42em;
+  color:#A7A1AE;
+  background-color:#fff;
+}
+
+h1 {
+  font-size:3em; 
+  font-weight: 300;
+  line-height:1em;
+  text-align: center;
+  color: #4DC3FA;
+}
+
+h2 {
+  font-size:1em; 
+  font-weight: 300;
+  text-align: center;
+  display: block;
+  line-height:1em;
+  padding-bottom: 2em;
+  color: #FB667A;
+}
+
+h2 a {
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #FB667A;
+  text-decoration: none;
+}
+
+.blue { color: #185875; }
+.yellow { color: #FFF842; }
+
+.container th h1 {
+    font-weight: bold;
+    font-size: 1em;
+  text-align: left;
+  color: #185875;
+}
+
+.container td {
+    font-weight: normal;
+    font-size: 1em;
+  -webkit-box-shadow: 0 2px 2px -2px #0E1119;
+     -moz-box-shadow: 0 2px 2px -2px #0E1119;
+          box-shadow: 0 2px 2px -2px #0E1119;
+}
+
+.container {
+    text-align: left;
+    overflow: hidden;
+    width: 80%;
+    margin: 0 auto;
+  display: table;
+  padding: 0 0 8em 0;
+}
+
+.container td, .container th {
+    padding-bottom: 2%;
+    padding-top: 2%;
+  padding-left:2%;  
+}
+
+/* Background-color of the odd rows */
+.container tr:nth-child(odd) {
+    background-color: #323C50;
+}
+
+/* Background-color of the even rows */
+.container tr:nth-child(even) {
+    background-color: #2C3446;
+}
+
+.container th {
+    background-color: #1F2739;
+}
+
+.container td:first-child { color: #FB667A; }
+
+.container tr:hover {
+   background-color: #464A52;
+-webkit-box-shadow: 0 6px 6px -6px #0E1119;
+     -moz-box-shadow: 0 6px 6px -6px #0E1119;
+          box-shadow: 0 6px 6px -6px #0E1119;
+}
+
+.container td:hover {
+  background-color: #4DC3FA;
+  color: #403E10;
+  font-weight: bold;
+  
+  box-shadow: #217C7F -1px 1px, #217C7F -2px 2px, #217C7F -3px 3px, #217C7F -4px 4px, #217C7F -5px 5px, #217C7F -6px 6px;
+  transform: translate3d(6px, -6px, 0);
+  
+  transition-delay: 0s;
+    transition-duration: 0.4s;
+    transition-property: all;
+  transition-timing-function: line;
+}
+
+@media (max-width: 800px) {
+.container td:nth-child(4),
+.container th:nth-child(4) { display: none; }
+}
+
