--- a/app/views/admin/payroll.html.erb
+++ b/app/views/admin/payroll.html.erb
@@ -1,53 +1,60 @@
 <%= render 'header' %>
-<div class="container">
-	<h1>Payroll Analysis</h1>
+<h1>Payroll Analysis (Month)</h1>
+<div id="margin1">
+	<table class="container">
+		<thead>
+			<tr>
+				<th><h1>Emloyee/ID</h1></th>
+				<th><h1>Standard salary</h1></th>
+				<th><h1>Hours worked (hrs)</h1></th>
+				<th><h1>Additional earnings</h1></th>
+				<th><h1>Gross pay</h1></th>
+				<th><h1>Pay day</h1></th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Simeon</td>
+				<td>800k</td>
+				<td>600</td>
+				<td>20k</td>
+				<td>820k</td>
+				<td>Nov 26</td>
+			</tr>
+			<tr>
+				<td>Clement</td>
+				<td>800k</td>
+				<td>600</td>
+				<td>20k</td>
+				<td>820k</td>
+				<td>Nov 26</td>
+			</tr>
+			<tr>
+				<td>Sakhile</td>
+				<td>800k</td>
+				<td>600</td>
+				<td>20k</td>
+				<td>820k</td>
+				<td>Nov 26</td>
+			</tr>
+	    <tr>
+				<td>Steven</td>
+				<td>500k</td>
+				<td>600</td>
+				<td>20k</td>
+				<td>520k</td>
+				<td>Nov 26</td>
+			</tr>
+	    <tr>
+				<td>Tony</td>
+				<td>500k</td>
+				<td>600</td>
+				<td>20k</td>
+				<td>520k</td>
+				<td>Nov 26</td>
+			</tr>
+	    
+		</tbody>
+	</table>
 </div>
-<table class="table-minimal">
-  <thead>
-    <tr>
-      <th>Employee/ID</th>
-      <th>Standard salary</th>
-      <th>Hours worked</th>
-      <th>Additional earnings</th>
-      <th>Gross pay</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Row 1 Cell 1</td>
-      <td>Row 1 Cell 2</td>
-      <td>Row 1 Cell 2</td>
-      <td>Row 1 Cell 2</td>
-      <td>Row 1 Cell 2</td>
-    </tr>
-    <tr>
-      <td>Row 2 Cell 1</td>
-      <td>Row 2 Cell 2</td>
-      <td>Row 1 Cell 2</td>
-      <td>Row 1 Cell 2</td>
-      <td>Row 1 Cell 2</td>
-    </tr>
-    <tr>
-      <td>Row 3 Cell 1</td>
-      <td>Row 3 Cell 2</td>
-      <td>Row 3 Cell 1</td>
-      <td>Row 3 Cell 1</td>
-      <td>Row 3 Cell 1</td>
-    </tr>
-    <tr>
-      <td>Row 4 Cell 1</td>
-      <td>Row 4 Cell 2</td>
-      <td>Row 4 Cell 1</td>
-      <td>Row 4 Cell 1</td>
-      <td>Row 4 Cell 1</td>
-    </tr>
-    <tr>
-      <td>Row 4 Cell 1</td>
-      <td>Row 4 Cell 2</td>
-      <td>Row 4 Cell 1</td>
-      <td>Row 4 Cell 1</td>
-      <td>Row 4 Cell 1</td>
-    </tr>
-  </tbody>
-</table>
 <%= render 'footer' %>
