--- a/app/views/admin/dashboard.html.erb
+++ b/app/views/admin/dashboard.html.erb
@@ -1,5 +1,5 @@
 <%= render 'header' %>
-
+<div class="container">
 <h1>Admin#dashboard</h1>
 <div class="grid-items-lines">
   <a href="javascript:void(0)" class="grid-item">
@@ -44,5 +44,6 @@
   </a>
   <div class="right-cover"></div>
   <div class="bottom-cover"></div>
+</div>
 </div>
 <%= render 'footer' %>
