Addition of report page
Modification of existing pages with addition of report page and user page.

--- a/app/views/admin/_header.html.erb
+++ b/app/views/admin/_header.html.erb
@@ -9,6 +9,7 @@
         <%= nav_link 'Dashboard', '/admin/dashboard' %>
         <%= nav_link 'Accounts', '/admin/accounts' %>
         <%= nav_link 'Payroll', '/admin/payroll' %>
+        <%= nav_link 'Reports', '/admin/reports' %>
       </ul>
     </nav>
 
