--- a/app/views/admin/accounts.html.erb
+++ b/app/views/admin/accounts.html.erb
@@ -1,3 +1,32 @@
 <%= render 'header' %>
-Accounts
+<br>
+<div class="container">
+	<div class="well well-lg">
+		<h4>Number of full time employees: <%= %></h4>
+		<h4>Number of contract staffs: <%= %></h4>
+	</div>
+</div>
+<div id="margin1">
+	<table class="container">
+			<thead>
+				<tr>
+					<th><h1>Emloyee/ID</h1></th>
+					<th><h1>Standard salary</h1></th>
+					<th><h1>Role</h1></th>
+					<th><h1>Status</h1></th>
+					<th><h1>Pay day</h1></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td><%= link_to 'Simeon', 'userpage', 'data-toggle' => 'modal', 'data-target' => '#myModal' %></td>
+					<td>800k</td>
+					<td><%= %></td>
+					<td><%= %></td>
+					<td><%= %></td>
+					
+				</tr>
+			</tbody>	
+	</table>
+</div>
 <%= render 'footer' %>
