--- a/app/views/admin/userpage.html.erb
+++ b/app/views/admin/userpage.html.erb
@@ -1,4 +1,4 @@
-<div class="avatar">
+<!-- <div class="avatar">
 	<img src="img/avatar.png" alt="Avatar">
 </div>
 
@@ -26,4 +26,21 @@
 	</p>
 
 	<p>Want to send me a love letter? <a href="#">Email me</a>.</p>
-</div>
+</div> -->
+
+<div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                 <h4 class="modal-title">Modal title</h4>
+            </div>      <!-- /modal-header -->
+            <div class="modal-body">
+            <p>Name: <%= %></p>
+            <p>Address: <%= %></p>
+            <p>Phone: <%= %></p>
+            <p>Role: <%= %></p>
+            <p>Next pay day: <%= %></p>
+            </div>      <!-- /modal-body -->
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>      
+            <!-- /modal-footer -->
